// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/core should add element [elm4] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
    "type": "@trampss/ADD_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
      Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
      },
    ],
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
      },
    },
    "initialized": true,
    "keys": Array [
      "elm2",
      "elm1",
      "elm3",
      "elm4",
    ],
  },
}
`;

exports[`middlewares/core should add element [elm4] on initial store 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm4",
      "infos": "elm4",
      "some": "other",
    },
    "type": "@trampss/ADD_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
      },
    ],
    "data": Object {
      "elm4": Object {
        "code": "elm4",
        "infos": "elm4",
        "some": "other",
      },
    },
    "initialized": true,
    "keys": Array [
      "elm4",
    ],
  },
}
`;

exports[`middlewares/core should initialize 1`] = `
Object {
  "state": Object {
    "array": Array [],
    "data": Object {},
    "initialized": false,
    "keys": Array [],
  },
}
`;

exports[`middlewares/core should not duplicate object with same key [elm2] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm2",
      "infos": "elm2",
      "some": "other",
    },
    "type": "@trampss/ADD_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    ],
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    },
    "initialized": true,
    "keys": Array [
      "elm2",
      "elm1",
      "elm3",
    ],
  },
}
`;

exports[`middlewares/core should remove element [elm1] 1`] = `
Object {
  "action": Object {
    "payload": "elm1",
    "type": "@trampss/REMOVE_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    ],
    "data": Object {
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    },
    "initialized": false,
    "keys": Array [
      "elm2",
      "elm3",
    ],
  },
}
`;

exports[`middlewares/core should reset state 1`] = `
Object {
  "action": Object {
    "type": "@trampss/RESET_TESTPREFIX",
  },
  "state": Object {
    "array": Array [],
    "data": Object {},
    "initialized": false,
    "keys": Array [],
  },
}
`;

exports[`middlewares/core should set elements [elm1,elm2] 1`] = `
Object {
  "action": Object {
    "payload": Array [
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
    ],
    "type": "@trampss/SET_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
    ],
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
    },
    "initialized": true,
    "keys": Array [
      "elm1",
      "elm2",
    ],
  },
}
`;

exports[`middlewares/core should update an element [elm3] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm3",
      "infos": "elm3",
      "some": "other UPDATE",
    },
    "type": "@trampss/UPDATE_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other UPDATE",
      },
    ],
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other UPDATE",
      },
    },
    "initialized": false,
    "keys": Array [
      "elm2",
      "elm1",
      "elm3",
    ],
  },
}
`;

exports[`middlewares/core should update an element not present [elm12] 1`] = `
Object {
  "action": Object {
    "payload": Object {
      "code": "elm12",
      "infos": "elm12",
      "some": "other",
    },
    "type": "@trampss/UPDATE_TESTPREFIX",
  },
  "state": Object {
    "array": Array [
      Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    ],
    "data": Object {
      "elm1": Object {
        "code": "elm1",
        "infos": "elm1",
        "some": "other",
      },
      "elm2": Object {
        "code": "elm2",
        "infos": "elm2",
        "some": "other",
      },
      "elm3": Object {
        "code": "elm3",
        "infos": "elm3",
        "some": "other",
      },
    },
    "initialized": false,
    "keys": Array [
      "elm2",
      "elm1",
      "elm3",
    ],
  },
}
`;
